cambiar pruebas para adaptarse a cifrado y politica de contraseñas